RESOLVED FIXED14406
<colgroup>'s borders are ignored when it has <col> children
https://bugs.webkit.org/show_bug.cgi?id=14406
Summary <colgroup>'s borders are ignored when it has <col> children
mitz
Reported 2007-06-26 01:20:25 PDT
The border collapsing algorithm ignores column group borders if the <colgroup> has <col> children. This is why tables/mozilla_expected_failures/core/table_rules.html and tables/mozilla_expected_failures/marvin/x_table_rules_groups.xml fail. Patch forthcoming.
Attachments
Check if the col element is inside a colgroup (105.49 KB, patch)
2007-06-26 01:25 PDT, mitz
hyatt: review+
mitz
Comment 1 2007-06-26 01:25:56 PDT
Created attachment 15239 [details] Check if the col element is inside a colgroup
Dave Hyatt
Comment 2 2007-06-26 21:58:08 PDT
Comment on attachment 15239 [details] Check if the col element is inside a colgroup r=me
Mark Rowe (bdash)
Comment 3 2007-06-26 22:34:27 PDT
Landed in r23810.
Note You need to log in before you can comment on or make changes to this bug.